front end hooked up with images

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <org.hibernate.validator>6.0.16.Final</org.hibernate.validator>
     <org.hsqldb.version> 2.3.1 </org.hsqldb.version>
     <org.junit.version>4.12</org.junit.version>
+    <commons-io.version>2.6</commons-io.version>
   </properties>
 
   <build>
@@ -105,6 +106,11 @@
         <artifactId>junit</artifactId>
         <version>${org.junit.version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>${commons-io.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
