--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -84,6 +84,10 @@
       <artifactId>gson</artifactId>
       <version>2.8.5</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
