Working on Create Property form including the image upload system

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,10 @@
         org.springframework.web.context.support.AnnotationConfigWebApplicationContext
       </param-value>
     </init-param>
+    <multipart-config>
+      <max-file-size>1000</max-file-size>
+      <max-request-size>1000</max-request-size>
+    </multipart-config>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
