--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -88,6 +88,12 @@
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
     </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
