--- a/interfaces/pom.xml
+++ b/interfaces/pom.xml
@@ -27,6 +27,12 @@
       <artifactId>model</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-web</artifactId>
+          <version>5.1.6.RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
