--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <org.hsqldb.version> 2.3.1 </org.hsqldb.version>
     <org.junit.version>4.12</org.junit.version>
     <commons-io.version>2.6</commons-io.version>
+    <commons-fileupload.version>1.3.1</commons-fileupload.version>
   </properties>
 
   <build>
@@ -111,6 +112,11 @@
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>${commons-io.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>${commons-fileupload.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
