--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <org.junit.version>4.12</org.junit.version>
     <commons-io.version>2.6</commons-io.version>
     <commons-fileupload.version>1.3.1</commons-fileupload.version>
+    <javax.mail.version>1.4.3</javax.mail.version>
   </properties>
 
   <build>
@@ -117,6 +118,16 @@
         <groupId>commons-fileupload</groupId>
         <artifactId>commons-fileupload</artifactId>
         <version>${commons-fileupload.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
+        <version>${org.springframework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>mail</artifactId>
+        <version>${javax.mail.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
