--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,12 @@
     <org.hibernate.validator>6.0.16.Final</org.hibernate.validator>
     <org.hsqldb.version> 2.3.1 </org.hsqldb.version>
     <org.junit.version>4.12</org.junit.version>
+    <org.mockito.version> 2.27.0 </org.mockito.version>
+
     <commons-io.version>2.6</commons-io.version>
     <commons-fileupload.version>1.3.1</commons-fileupload.version>
     <javax.mail.version>1.4.3</javax.mail.version>
+
   </properties>
 
   <build>
@@ -108,6 +111,12 @@
         <artifactId>junit</artifactId>
         <version>${org.junit.version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>${org.mockito.version}</version>
+        <scope> test </scope>
       </dependency>
       <dependency>
         <groupId>commons-io</groupId>
