--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <org.springframework.version>5.1.6.RELEASE</org.springframework.version>
     <servlet-api.version>2.5</servlet-api.version>
     <jstl.version>1.2</jstl.version>
-    <org.postgresql.version>9.3-1102-jdbc41</org.postgresql.version>
+    <org.postgresql.version>42.2.5</org.postgresql.version>
     <spring-security.version>4.0.4.RELEASE</spring-security.version>
     <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
     <javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
