--- a/interfaces/pom.xml
+++ b/interfaces/pom.xml
@@ -27,12 +27,16 @@
       <artifactId>model</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
-      <dependency>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-web</artifactId>
-          <version>5.1.6.RELEASE</version>
-          <scope>compile</scope>
-      </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>5.1.6.RELEASE</version>
+        <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
