Add global error handling check and create Internal Server Error page

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,10 @@
     <load-on-startup>1</load-on-startup>
   </servlet>
 
+  <error-page>
+    <location> /errors </location>
+  </error-page>
+
   <servlet-mapping>
     <servlet-name>dispatcher</servlet-name>
     <url-pattern>/</url-pattern>
