--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <maven-war-plugin.version>2.6</maven-war-plugin.version>
     <org.hibernate.version>5.1.0.Final</org.hibernate.version>
     <org.hibernate.jpa.version>1.0.0.Final</org.hibernate.jpa.version>
+    <javax.xml.bind.version> 2.3.0 </javax.xml.bind.version>
   </properties>
 
   <build>
@@ -201,6 +202,12 @@
         <groupId>org.hibernate.javax.persistence</groupId>
         <artifactId>hibernate-jpa-2.1-api</artifactId>
         <version>${org.hibernate.jpa.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>${javax.xml.bind.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
